hphp/hack/test/typecheck/reified_generics/new_expression.php.exp
File "new_expression.php", line 11, characters 7-7:
The type D expects 0 type parameter(s) (Typing[4101])
File "new_expression.php", line 10, characters 26-31:
The type argument at index 1 is reified (Typing[4302])
  File "new_expression.php", line 4, characters 18-19:
  Its definition Tu is not
File "new_expression.php", line 12, characters 3-9:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "new_expression.php", line 6, characters 7-7:
  Definition is here
